--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <title>Smart Cicken Coop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
-<body class="bg-dark text-white">
-    <h2 class="col-12 text-center mt-5">Smart Chicken Coop</h2>
-    <div class="col-8 offset-2 card" id= "divLogin">
+<body class="text-primary" style="background-color:lightgrey;">
+    <h2 class="col-12 text-center mt-5 ">Smart Chicken Coop</h2>
+    <div class="col-8 offset-2 card " id= "divLogin" style="float: center;">
         <div class="card-header">
             <h3>Login</h3>
         </div>
             <div class=card-body>
                 <form>
-                    
                     <label for="txtUsername" class="form-label" >Username:</label>
                     <input id="txtUsername" type="text" class="form-control">
                     <label for="txtPassword" class="form-label" >Password:</label>
@@ -32,22 +31,18 @@
         </div>
             <div class=card-body>
                 <form>
-                    <div class="container">
+                    <div class="container table-row">
                         <label for="txtFirstName" class="form-label ">First Name</label>
                         <span><input id="txtFirstName" type="text" placeholder="Enter your first name">
                         </span>
-                    </div>
-                    <div class="container">
                         <label for="txtLastName" class="form-label">Last Name</label>
                         <span><input id="txtLastName" type="text" placeholder="Enter your last name">
                         </span>
-                    </div>
-                    <div class="container">
                         <label for="txtEmail"type="email" class="form-label">Email</label>
                         <span><input id="txtEmail" type="email" placeholder="Enter your email">
                         </span>
                     </div>
-                    <div class="container">
+                    <div class="container table-row">
                         <label for="txtPword"type="text" class="form-label">Password</label>
                         <span><input id="txtPword" type="password" placeholder="Create a password">
                         </span>
@@ -55,12 +50,10 @@
                         <span><input id="txtPword" type="password" placeholder="Create a password">
                         </span>
                     </div>
-                    <div class="container">
+                    <div class="container table-row">
                         <label for="txtStAddress1"type="text" class="form-label">Street Address 1</label>
                         <span><input id="txtStAddress1" type="text" placeholder="Street Address 1">
                         </span>
-                    </div>
-                    <div class="container">
                         <label for="txtStAddress2"type="text" class="form-label">Street Address 2</label>
                         <span><input id="txtStAddress2" type="text" placeholder="Street Address 2">
                         </span>
@@ -69,13 +62,9 @@
                         <label for="txtCity"type="text" class="form-label">City</label>
                         <span><input id="txtCity" type="text" placeholder="Enter your city">
                         </span>
-                    </div>
-                    <div class="container">
                         <label for="txtState"type="text" class="form-label">State</label>
                         <span><input id="txtState" type="text" placeholder="Enter your State">
                         </span>
-                    </div>
-                    <div class="container">
                         <label for="txtZip"type="number" class="form-label">Zip</label>
                         <span><input id="txtZip" type="number" placeholder="Enter your Zip">
                         </span>
