--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Smart Cicken Coop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
-<body class="bg-dark text-white">
+<body style="background-image: url(cartoon-illustration-of-rooster-chicken-and-chicks-vector.jpg); background-size: 50%;">
     <h2 class="col-12 text-center mt-5">Smart Chicken Coop</h2>
-    <div class="col-8 offset-2 card" id= "divLogin">
+    <div class="col-4 offset-4 card" id= "divLogin" stlye="float-center">
         <div class="card-header">
-            <h3>Login</h3>
+            <h3 class="text-center">Login</h3>
         </div>
             <div class=card-body>
                 <form>
@@ -19,8 +19,7 @@
                     <input id="txtUsername" type="text" class="form-control">
                     <label for="txtPassword" class="form-label" >Password:</label>
                     <input id="txtPassword" type="text" class="form-control" >
-                    <button id="btnLogin" type="button" class="btn btn-primary mt-2">Login</button>
-                    <input id="btnRemeberMe" type="checkbox" class="button-check" value="">Remeber Me</button>
+                    <button id="btnLogin" type="button" class="btn btn-primary">Login</button>
                     <h3>Get Registered Here</h3>
                     <button id="btnRegister" type="button" class="btn btn-warning">Register</button>
                 </form>
