Changed some text colors, centered register text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body style="background-image: url(cartoon-illustration-of-rooster-chicken-and-chicks-vector.jpg); background-size: 50%;">
-    <h2 class="col-12 text-center mt-5">Smart Chicken Coop</h2>
+    <h2 class="col-12 text-center mt-5 text-danger">Smart Chicken Coop</h2>
     <div class="col-4 offset-4 card" id= "divLogin" stlye="float-center">
         <div class="card-header">
             <h3 class="text-center">Login</h3>
@@ -19,8 +19,8 @@
                     <input id="txtUsername" type="text" class="form-control">
                     <label for="txtPassword" class="form-label" >Password:</label>
                     <input id="txtPassword" type="text" class="form-control" >
-                    <button id="btnLogin" type="button" class="btn btn-primary">Login</button>
-                    <h3>Get Registered Here</h3>
+                    <button id="btnLogin" type="button" class="btn btn-primary mt-2">Login</button>
+                    <h5 class="text-center">Get Registered Here</h5>
                     <button id="btnRegister" type="button" class="btn btn-warning">Register</button>
                 </form>
             </div> 
