updated login page and deleted title

--- a/index.html
+++ b/index.html
@@ -10,20 +10,16 @@
 </head>
 
 <body class="text-primary" style="background-color:lightgrey; background:url(peacefulFarm.jpeg)" id="bodyClass">
-    <h2 class="col-12 text-center mt-5" style="font-family: serif;">Smart Chicken Coop</h2>
-    <div class="col-8 offset-2 card" id="divLogin" style="float: center;">
-        <div class="card-header">
-            <h3>Login</h3>
-        </div>
+    <div class="col-8 offset-2 card mt-5" id="divLogin" style="float: center;">
         <div class=card-body>
             <form>
+                <img src="" alt="">
                 <label for="txtUsername" class="form-label">Username:</label>
                 <input id="txtUsername" type="text" class="form-control">
                 <label for="txtPassword" class="form-label">Password:</label>
                 <input id="txtPassword" type="text" class="form-control">
-                <button id="btnLogin" type="button" class="btn btn-primary mt-2">Login</button>
-                <h3>Get Registered Here</h3>
-                <button id="btnRegister" type="button" class="btn btn-warning">Register</button>
+                <button id="btnLogin" type="button" class="btn btn-primary col-12 mt-2">Login</button>
+                <button id="btnRegister" type="button" class="btn btn-warning col-12 mt-1">Register Account</button>
             </form>
         </div>
     </div>
