--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
     <section class="testimonial py-5" id="divRegister" style="display: none; background-color: darkblue;" >
         <div class="container">
             <div class="row ">
-                <div class="col-10 col-md-4 py-5" >
-                    <div class="d-flex justify-content-center align-items-center vh-100 col-12" style="max-width: 100%; height: auto;">
+                <div class="col-8 col-md-4 py-1 d-flex justify-content-center align-items-center vh-100 col-12" >
+                    <div>
                         <div class="card-body">
-                            <img src="CluckHub.png">
+                            <img src="CluckHub.png" style="max-width: 100%; margin-bottom: auto; margin-top: auto;">>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-8 py-5 border">
-                    <form  class="col-12 col-md-10">
-                        <h4 class="pb-4 " style="text-align: center; color: white;">Register a new account</h4>
+                    <form  class="col-12 col-md-10 col-sm-6">
+                        <h4 class="pb-4 " style="text-align: center; color: white;" aria-label="Register a new account">Register a new account</h4>
                         <div class="form-row" style="text-align: justify;">
                             <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
                                 <label for="txtFirstName" class="form-label" style="margin-right: 5px;">First Name:</label>
@@ -87,7 +87,7 @@
                                 <input id="txtCoopID" type="number" placeholder="Create a Unique ID"class="form-control">
                             </div>
                             <div class="container mb-3" style="text-align: center;">
-                                <button id="btnComplete" type="button" class="btn btn-warning">Create Account</button>
+                                <button id="btnComplete" type="button" class="btn btn-warning" aria-label="Create Account">Create Account</button>
                             </div>
                             <div class="container mb-3" style="text-align: center; color: white;">
                                 <footer style="text-align: center;">
