--- a/index.html
+++ b/index.html
@@ -35,56 +35,56 @@
                 </div>
                 <div class="col-md-8 py-5 border">
                     <form  class="col-12 col-md-10 col-sm-6">
-                        <h4 class="pb-4 " style="text-align: center; color: white;" aria-label="Register a new account">Register a new account</h4>
+                        <h4 class="pb-4 " style="text-align: center; color: white;" for="Register a new account">Register a new account</h4>
                         <div class="form-row" style="text-align: justify;">
                             <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label for="txtFirstName" class="form-label" style="margin-right: 5px;">First Name:</label>
+                                <label  class="form-label" style="margin-right: 5px;">First Name:</label>
                                 <input id="txtFirstName" type="text" placeholder="Enter your first name" class="form-control" style="margin-right: 20px;">
                             </div>
                             <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label for="txtLastName" class="form-label" style="margin-right: 5px;">Last Name:</label>
+                                <label  class="form-label" style="margin-right: 5px;">Last Name:</label>
                                 <input id="txtLastName" type="text" placeholder="Enter your last name" class="form-control" style="margin-right: 20px;">
                             </div>
                             <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label for="txtEmail" type="email" class="form-label" style="margin-right: 5px;">Email:</label>
+                                <label  type="email" class="form-label" style="margin-right: 5px;">Email:</label>
                                 <input id="txtEmail" type="email" placeholder="Enter your email" class="form-control">
                             </div>
                             <div class="input-group  mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label for="txtPword" type="text" class="form-label" style="margin-right: 5px;">Password:</label>
+                                <label  type="text" class="form-label" style="margin-right: 5px;">Password:</label>
                                 <input id="txtPword" type="password" placeholder="Create a password" class="form-control" style="margin-right: 20px;">
                             </div>
                             <div class="input-group  mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label for="txtPwordConfirm" type="text" class="form-label" style="margin-right: 5px;">Confirm Password:</label>
+                                <label type="text" class="form-label" style="margin-right: 5px;">Confirm Password:</label>
                                 <input id="txtPword" type="password" placeholder="Retype Password" class="form-control">
                             </div>
                             <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label for="txtStAddress1" type="text" class="form-label" style="margin-right: 5px;">Street Address 1:</label>
-                                <input id="txtStAddress1" type="text" placeholder=" Street Address 1" class="form-control" style="margin-right: 20px;">
+                                <label type="text" class="form-label" style="margin-right: 5px;">Street Address 1:</label>
+                                <input id="txtStAddress1" type="text" placeholder="Enter Street Address 1" class="form-control" style="margin-right: 20px;">
                             </div>
                             <div class="input-group  mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label for="txtStAddress2" type="text" class="form-label" style="margin-right: 5px;">Street Address 2:</label>
-                                <input id="txtStAddress2" type="text" placeholder="Street Address 2" class=" form-control">
+                                <label type="text" class="form-label" style="margin-right: 5px;">Street Address 2:</label>
+                                <input id="txtStAddress2" type="text" placeholder="Enter Street Address 2" class=" form-control">
                             </div>
                             <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label for="txtCity" type="text" class="form-label" style="width: fit-content; margin-right: 5px;">City:</label>
+                                <label type="text" class="form-label" style="width: fit-content; margin-right: 5px;">City:</label>
                                 <input id="txtCity" type="text" placeholder="Enter your city" class="form-control" style="margin-right: 20px;">
                             </div>
                             <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
                                 <span class="input-group-addon" style="width: fit-content;"></span>
-                                <label for="txtState" type="text" class="form-label" style="width: fit-content; margin-right: 5px; ">State:</label>
+                                <label type="text" class="form-label" style="width: fit-content; margin-right: 5px; ">State:</label>
                                 <input id="txtState" type="text" placeholder="Enter your State" class="form-control" style="margin-right: 20px;">
                             </div>
                             <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label for="txtZip" type="number" class="form-label" style="width: fit-content; margin-right: 5px;">Zip:</label>
+                                <label type="number" class="form-label" style="width: fit-content; margin-right: 5px;">Zip:</label>
                                 <input id="txtZip" type="number" placeholder="Enter your Zip" class="form-control">
                             </div>
                             <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label for="txtPhone" type="number" class="form-label" style="width: fit-content; margin-right: 5px;">Phone:</label>
-                                <input id="txtPhone" type="number" placeholder="Enter a Phone Number" class="form-control">
+                                <label type="number" class="form-label" style="width: fit-content; margin-right: 5px;">Phone:</label>
+                                <input  id="txtPhone" type="number" placeholder="Enter your Phone Number" class="form-control">
                             </div>
                             <div class="input-group mb-3 center" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label for="txtCoopID" type="number" class="form-label" style="width: fit-content; margin-right: 5px;">Coop Registration ID:</label>
-                                <input id="txtCoopID" type="number" placeholder="Create a Unique ID"class="form-control">
+                                <label type="number" class="form-label" style="width: fit-content; margin-right: 5px;">Coop Registration ID:</label>
+                                <input  id="txtCoopID" type="number" placeholder="Create a Unique ID"class="form-control">
                             </div>
                             <div class="container mb-3" style="text-align: center;">
                                 <button id="btnComplete" type="button" class="btn btn-warning" aria-label="Create Account">Create Account</button>
