--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-8 py-5 border">
+                <div class="col-md-8 py-5 ">
                     <form  class="col-12 col-md-10 col-sm-6">
                         <h4 class="pb-4 " style="text-align: center; color: white;" for="Register a new account">Register a new account</h4>
                         <div class="form-row" style="text-align: justify;">
