--- a/index.html
+++ b/index.html
@@ -9,102 +9,96 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 
-<body class="text-primary" style="background-color:lightgrey; background:url(peacefulFarm.jpeg)" id="bodyClass">
-    <div class="col-8 offset-2 card mt-5" id="divLogin" style="float: center;">
+<body class="text-primary" style="background-color:black; background:url(peacefulFarm.jpeg)" id="bodyClass">
+    <div class="col-12 col-md-4 offset-md-4 card mt-5" id="divLogin" style="float: center;">
         <div class=card-body>
+            <img src="CluckHub.png" class="col-12" width="100" height="200">
             <form>
-                <img src="" alt="">
+                
                 <label for="txtUsername" class="form-label">Username:</label>
                 <input id="txtUsername" type="text" class="form-control">
                 <label for="txtPassword" class="form-label">Password:</label>
                 <input id="txtPassword" type="text" class="form-control">
-                <button id="btnLogin" type="button" class="btn btn-primary col-12 mt-2">Login</button>
-                <button id="btnRegister" type="button" class="btn btn-warning col-12 mt-1">Register Account</button>
+                <button id="btnLogin" type="button" class="btn btn-primary mt-2 col-12">Login</button>
+                <button id="btnRegister" type="button" class="btn btn-warning mt-1 col-12">Register Account</button>
             </form>
         </div>
     </div>
-    <section class="testimonial py-5" id="divRegister" style="display: none; background-color: darkblue;" >
-        <div class="container">
-            <div class="row ">
-                <div class="col-8 col-md-4 py-1 d-flex justify-content-center align-items-center vh-100 col-12" >
-                    <div>
-                        <div class="card-body">
-                            <img src="CluckHub.png" style="max-width: 100%; margin-bottom: auto; margin-top: auto;">>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-8 py-5 ">
-                    <form  class="col-12 col-md-10 col-sm-6">
-                        <h4 class="pb-4 " style="text-align: center; color: white;" for="Register a new account">Register a new account</h4>
-                        <div class="form-row" style="text-align: justify;">
-                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label  class="form-label" style="margin-right: 5px;">First Name:</label>
-                                <input id="txtFirstName" type="text" placeholder="Enter your first name" class="form-control" style="margin-right: 20px;">
-                            </div>
-                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label  class="form-label" style="margin-right: 5px;">Last Name:</label>
-                                <input id="txtLastName" type="text" placeholder="Enter your last name" class="form-control" style="margin-right: 20px;">
-                            </div>
-                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label  type="email" class="form-label" style="margin-right: 5px;">Email:</label>
-                                <input id="txtEmail" type="email" placeholder="Enter your email" class="form-control">
-                            </div>
-                            <div class="input-group  mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label  type="text" class="form-label" style="margin-right: 5px;">Password:</label>
-                                <input id="txtPword" type="password" placeholder="Create a password" class="form-control" style="margin-right: 20px;">
-                            </div>
-                            <div class="input-group  mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label type="text" class="form-label" style="margin-right: 5px;">Confirm Password:</label>
-                                <input id="txtPword" type="password" placeholder="Retype Password" class="form-control">
-                            </div>
-                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label type="text" class="form-label" style="margin-right: 5px;">Street Address 1:</label>
-                                <input id="txtStAddress1" type="text" placeholder="Enter Street Address 1" class="form-control" style="margin-right: 20px;">
-                            </div>
-                            <div class="input-group  mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label type="text" class="form-label" style="margin-right: 5px;">Street Address 2:</label>
-                                <input id="txtStAddress2" type="text" placeholder="Enter Street Address 2" class=" form-control">
-                            </div>
-                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label type="text" class="form-label" style="width: fit-content; margin-right: 5px;">City:</label>
-                                <input id="txtCity" type="text" placeholder="Enter your city" class="form-control" style="margin-right: 20px;">
-                            </div>
-                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <span class="input-group-addon" style="width: fit-content;"></span>
-                                <label type="text" class="form-label" style="width: fit-content; margin-right: 5px; ">State:</label>
-                                <input id="txtState" type="text" placeholder="Enter your State" class="form-control" style="margin-right: 20px;">
-                            </div>
-                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label type="number" class="form-label" style="width: fit-content; margin-right: 5px;">Zip:</label>
-                                <input id="txtZip" type="number" placeholder="Enter your Zip" class="form-control">
-                            </div>
-                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label type="number" class="form-label" style="width: fit-content; margin-right: 5px;">Phone:</label>
-                                <input  id="txtPhone" type="number" placeholder="Enter your Phone Number" class="form-control">
-                            </div>
-                            <div class="input-group mb-3 center" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
-                                <label type="number" class="form-label" style="width: fit-content; margin-right: 5px;">Coop Registration ID:</label>
-                                <input  id="txtCoopID" type="number" placeholder="Create a Unique ID"class="form-control">
-                            </div>
-                            <div class="container mb-3" style="text-align: center;">
-                                <button id="btnComplete" type="button" class="btn btn-warning" aria-label="Create Account">Create Account</button>
-                            </div>
-                            <div class="container mb-3" style="text-align: center; color: white;">
-                                <footer style="text-align: center;">
-                                    <p>Already have an account? Click here:<button id="btnReturn" type="button" class="btn btn-danger" style="background: none!important;
-                                        border: none;
-                                        padding: 0!important;
-                                        font-family: poppins, sans-serif;
-                                        color: red;
-                                        text-decoration: underline;
-                                        cursor: pointer;">Sign in</button></p>
-                                  </footer>
-                            </div>
-                    </form>
-                </div>
-            </div>
+    <div class="col-8 offset-2 card"  id="divRegister" style="justify-self: unset; height: auto; display: none; background-color: darkblue; opacity: .65;">
+        <div style="margin:  auto;"class="card-header " id="crdRegister">
+            <h3 style="color: white;">Create an Account</h3>
         </div>
-    </section>
+        <div class=card-body style="background-color: darkblue; color: white;">
+            <form>
+                <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto;">
+                    <label for="txtFirstName" class="form-label" style="margin-right: 5px;">First Name:</label>
+                    <input id="txtFirstName" type="text" placeholder="Enter your first name" class="form-control" style="margin-right: 20px;">
+                    <span class="input-group-addon " style="width: fit-content;"></span>
+                    <label for="txtLastName" class="form-label" style="margin-right: 5px;">Last Name:</label>
+                    <input id="txtLastName" type="text" placeholder="Enter your last name" class="form-control" style="margin-right: 20px;">
+                    <span class="input-group-addon" style="width: fit-content;"></span>
+                    <label for="txtEmail" type="email" class="form-label" style="margin-right: 5px;">Email:</label>
+                    <input id="txtEmail" type="email" placeholder="Enter your email" class="form-control">
+                </div>
+                <div class="input-group  mb-3" style="width: fit-content; margin-left: auto; margin-right: auto;">
+                    <label for="txtPword" type="text" class="form-label" style="margin-right: 5px;">Password:</label>
+                    <input id="txtPword" type="password" placeholder="Create a password" class="form-control" style="margin-right: 20px;">
+                    <span class="input-group-addon " style="width: fit-content;"></span>
+                    <label for="txtPwordConfirm" type="text" class="form-label" style="margin-right: 5px;">Confirm Password:</label>
+                    <input id="txtPword" type="password" placeholder="Create a password" class="form-control">
+                </div>
+                <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto;">
+                    <label for="txtStAddress1" type="text" class="form-label" style="margin-right: 5px;">Street Address 1:</label>
+                    <input id="txtStAddress1" type="text" placeholder=" Street Address 1" class="form-control" style="margin-right: 20px;">
+                    <span class="input-group-addon" style="width: fit-content;"></span>
+                    <label for="txtStAddress2" type="text" class="form-label" style="margin-right: 5px;">Street Address 2:</label>
+                    <input id="txtStAddress2" type="text" placeholder="Street Address 2" class=" form-control">
+                </div>
+                <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto;">
+                    <label for="txtCity" type="text" class="form-label" style="width: fit-content; margin-right: 5px;">City:</label>
+                    <input id="txtCity" type="text" placeholder="Enter your city" class="form-control" style="margin-right: 20px;">
+                    <span class="input-group-addon" style="width: fit-content;"></span>
+                    <label for="txtState" type="text" class="form-label" style="width: fit-content; margin-right: 5px;">State:</label>
+                    <input id="txtState" type="text" placeholder="Enter your State" class="form-control" style="margin-right: 20px;">
+                    <span class="input-group-addon" style="width: fit-content;"></span>
+                    <label for="txtZip" type="number" class="form-label"
+                        style="width: fit-content; margin-right: 5px;">Zip:</label>
+                    <input id="txtZip" type="number" placeholder="Enter your Zip" class="form-control">
+                </div>
+                <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto;">
+                    <label for="txtPhone" type="number" class="form-label" style="width: fit-content; margin-right: 5px;">Phone:</label>
+                    <input id="txtPhone" type="number" placeholder="Enter a Phone Number" class="form-control">
+                </div>
+                <div class="input-group mb-3 center" style="width: fit-content; margin-left: auto; margin-right: auto;">
+                    <label for="txtCoopID" type="number" class="form-label" style="width: fit-content; margin-right: 5px;">Coop Registration ID:</label>
+                    <input id="txtCoopID" type="number" placeholder="Create a Unique ID"class="form-control">
+                </div>
+                <div class="container mb-3" style="text-align: center;">
+                    <button id="btnComplete" type="button" class="btn btn-warning">Create Account</button>
+                </div>
+                <div class="container mb-3" style="text-align: center;">
+                    <footer style="text-align: center;">
+                        <p>Already have an account? Click here:<button id="btnReturn" type="button" class="btn btn-danger" style="background: none!important;
+                            border: none;
+                            padding: 0!important;
+                            font-family: poppins, sans-serif;
+                            color: red;
+                            text-decoration: underline;
+                            cursor: pointer;">Sign in</button></p>
+                      </footer>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="col-8 offset-2 card" id="divDashboard" style="display:none;">
+        <div class="card-header">
+        </div>
+        <div class=card-body>
+            <form>
+            </form>
+        </div>
+    </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
