--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 <div class="col-8 col-md-4 py-1 d-flex justify-content-center align-items-center vh-100 col-12" >
                     <div>
                         <div class="card-body">
-                            <img src="CluckHub.png" style="max-width: 100%; margin-bottom: auto; margin-top: auto;">>
+                            <img src="CluckHub.png" style="max-width: 100%; margin-bottom: auto; margin-top: auto;">
                         </div>
                     </div>
                 </div>
-                <div class="col-md-8 py-5 ">
+                <div class="col-md-8 py-5" style="text-align: center;">
                     <form  class="col-12 col-md-10 col-sm-6">
                         <h4 class="pb-4 " style="text-align: center; color: white;" for="Register a new account">Register a new account</h4>
                         <div class="form-row" style="text-align: justify;">
