--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="col-8 col-md-4 py-1 d-flex justify-content-center align-items-center vh-100 col-12" >
                     <div>
                         <div class="card-body">
-                            <img src="CluckHub.png" style="max-width: 100%; margin-bottom: auto; margin-top: auto;">>
+                            <img src="CluckHub.png" style="max-width: 100%; margin-bottom: auto; margin-top: auto;">
                         </div>
                     </div>
                 </div>
