--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             </form>
         </div>
     </div>
-    <section class="testimonial py-5" id="divRegister" style="display: none; background-color: darkblue;" >
+    <section class="testimonial py-5" id="divRegister" style="display: none;" >
         <div class="container">
-            <div class="row ">
+            <div class="row">
                 <div class="col-8 col-md-4 py-1 d-flex justify-content-center align-items-center vh-100 col-12" >
                     <div>
                         <div class="card-body">
@@ -34,69 +34,69 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-8 py-5 ">
+                <div class="col-md-8 py-5 rounded align-items-center" style="background-color: white;">
                     <form  class="col-12 col-md-10 col-sm-6">
-                        <h4 class="pb-4 " style="text-align: center; color: white;" for="Register a new account">Register a new account</h4>
+                        <h4 class="pb-4 " style="text-align: center; color: black;" for="Register a new account">Register a New Account</h4>
                         <div class="form-row" style="text-align: justify;">
-                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
+                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: black;">
                                 <label  class="form-label" style="margin-right: 5px;">First Name:</label>
                                 <input id="txtFirstName" type="text" placeholder="Enter your first name" class="form-control" style="margin-right: 20px;">
                             </div>
-                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
+                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: black;">
                                 <label  class="form-label" style="margin-right: 5px;">Last Name:</label>
                                 <input id="txtLastName" type="text" placeholder="Enter your last name" class="form-control" style="margin-right: 20px;">
                             </div>
-                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
+                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: black;">
                                 <label  type="email" class="form-label" style="margin-right: 5px;">Email:</label>
                                 <input id="txtEmail" type="email" placeholder="Enter your email" class="form-control">
                             </div>
-                            <div class="input-group  mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
+                            <div class="input-group  mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: black;">
                                 <label  type="text" class="form-label" style="margin-right: 5px;">Password:</label>
                                 <input id="txtPword" type="password" placeholder="Create a password" class="form-control" style="margin-right: 20px;">
                             </div>
-                            <div class="input-group  mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
+                            <div class="input-group  mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: black;">
                                 <label type="text" class="form-label" style="margin-right: 5px;">Confirm Password:</label>
                                 <input id="txtPword" type="password" placeholder="Retype Password" class="form-control">
                             </div>
-                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
+                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: black;">
                                 <label type="text" class="form-label" style="margin-right: 5px;">Street Address 1:</label>
                                 <input id="txtStAddress1" type="text" placeholder="Enter Street Address 1" class="form-control" style="margin-right: 20px;">
                             </div>
-                            <div class="input-group  mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
+                            <div class="input-group  mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: black;">
                                 <label type="text" class="form-label" style="margin-right: 5px;">Street Address 2:</label>
                                 <input id="txtStAddress2" type="text" placeholder="Enter Street Address 2" class=" form-control">
                             </div>
-                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
+                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: black;">
                                 <label type="text" class="form-label" style="width: fit-content; margin-right: 5px;">City:</label>
                                 <input id="txtCity" type="text" placeholder="Enter your city" class="form-control" style="margin-right: 20px;">
                             </div>
-                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
+                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: black;">
                                 <span class="input-group-addon" style="width: fit-content;"></span>
                                 <label type="text" class="form-label" style="width: fit-content; margin-right: 5px; ">State:</label>
                                 <input id="txtState" type="text" placeholder="Enter your State" class="form-control" style="margin-right: 20px;">
                             </div>
-                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
+                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: black;">
                                 <label type="number" class="form-label" style="width: fit-content; margin-right: 5px;">Zip:</label>
                                 <input id="txtZip" type="number" placeholder="Enter your Zip" class="form-control">
                             </div>
-                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
+                            <div class="input-group mb-3" style="width: fit-content; margin-left: auto; margin-right: auto; color: black;">
                                 <label type="number" class="form-label" style="width: fit-content; margin-right: 5px;">Phone:</label>
                                 <input  id="txtPhone" type="number" placeholder="Enter your Phone Number" class="form-control">
                             </div>
-                            <div class="input-group mb-3 center" style="width: fit-content; margin-left: auto; margin-right: auto; color: white;">
+                            <div class="input-group mb-3 center" style="width: fit-content; margin-left: auto; margin-right: auto; color: black;">
                                 <label type="number" class="form-label" style="width: fit-content; margin-right: 5px;">Coop Registration ID:</label>
                                 <input  id="txtCoopID" type="number" placeholder="Create a Unique ID"class="form-control">
                             </div>
                             <div class="container mb-3" style="text-align: center;">
                                 <button id="btnComplete" type="button" class="btn btn-warning" aria-label="Create Account">Create Account</button>
                             </div>
-                            <div class="container mb-3" style="text-align: center; color: white;">
+                            <div class="container mb-3" style="text-align: center; color: black;">
                                 <footer style="text-align: center;">
                                     <p>Already have an account? Click here:<button id="btnReturn" type="button" class="btn btn-danger" style="background: none!important;
                                         border: none;
                                         padding: 0!important;
                                         font-family: poppins, sans-serif;
-                                        color: red;
+                                        color: blue;
                                         text-decoration: underline;
                                         cursor: pointer;">Sign in</button></p>
                                   </footer>
