Changed from set width and height to auto

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="text-primary" style="background-color:black; background:url(peacefulFarm.jpeg)" id="bodyClass">
     <div class="col-12 col-md-4 offset-md-4 card mt-5" id="divLogin" style="float: center;">
         <div class="card-body" >
-            <img src="CluckHub.png"   class="col-12 mx-auto" width="300px" height="300px">
+            <img src="CluckHub.png"   class="col-12 mx-auto" width="auto" height="auto">
             <form>
                 
                 <label class="form-label">Username:</label>
