--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
                 $('#divLogin').slideDown();
             })
         })
+    <div>
         $('#btnLogin').on('click', function () {
         let strtxtUsername =$('#txtUsername').val();
         let strtxtPassword =('#txtPassword').val()
@@ -145,9 +146,11 @@
                 icon: "error",
                 html: strErrorMsg
                 
-            })
+                })
             }
-            })
+        })
+    </div>
+    <div>
         $('#btnComplete').on('click', function () {
         let strtxtFirstName =$('#txtFirstName').val();
         let strtxtLastName =$('#txtLastName').val();
@@ -217,6 +220,7 @@
             })
             }
         })
+    </div>
     </script>
 </body>
 </html>
